--- a/MySalute/MySaluteToSteveJobs.html
+++ b/MySalute/MySaluteToSteveJobs.html
@@ -7,28 +7,7 @@
 	<link rel="stylesheet" href="Mysalute.css">
 	<script src="jquery.min.js"></script>
 	<script src="bootstrap.min.js"></script>
-	<script>
-			$(document).ready(function(){
-			$("#container1").show();
-			$("#container2").hide();
-			$("#container3").hide();   
-			$("#btnnav1").click(function(){
-				$("#container1").show();
-				$("#container2").hide();
-				$("#container3").hide();
-			});
-			$("#btnnav2").click(function(){
-				$("#container1").hide();
-				$("#container2").show();
-				$("#container3").hide();
-			});
-			$("#btnnav3").click(function(){
-				$("#container1").hide();
-				$("#container2").hide();
-				$("#container3").show();
-			});
-		});
-	</script>
+	<script src="Mysalute.js"></script>
 </head>
 <body>
 	<div class="htmlmain" id="htmlheader">
