--- a/PersonalPortfolioWebpage/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage/PersonalPortfolioWebpage.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Personal Portfolio Webpage By morelearn</title>
-	<mate name="keywords" content="html,Font-end,bootstrap,personal portfolio webpage,javascript">
-	<mate name="author" content="付豪，morelearn1990">
+	<title>PersonalPortfolioWebpageBymorelearn</title>
+	<mate name="keywords" content="html,Font-end,bootstrap,personal portfolio webpage,javascript"></mate>
+	<mate name="author" content="付豪，morelearn1990"></mate>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="PersonalPortfolioWebpage.css">
 </head>
@@ -13,7 +12,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" id="top" role="navigation">
 			<div class="container">
 			    <div class="navbar-header">
-			      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+					<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
 			        <span class="sr-only">Toggle navigation</span>
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -51,15 +50,15 @@
 				</li>
 				<!-- Modal -->
 				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				  <div class="modal-dialog modal-sm">
-				    <div class="modal-content">
-				    	<div class="modal-header" style="text-align: center;">
-					        <small style="text-align: right;">if you use wechat，Please scan the two-dimensional code</small>
-					        <h4 class="modal-title" id="myModalLabel">微信扫描二维码</h4>
-					    </div>
-				    	<img src="mywechat.jpeg" style="width: 230px;height:230px ;">
-				    </div>
-				  </div>
+					  <div class="modal-dialog modal-sm">
+							<div class="modal-content">
+								<div class="modal-header" style="text-align: center;">
+									<small style="text-align: right;">if you use wechat，Please scan the two-dimensional code</small>
+									<h4 class="modal-title" id="myModalLabel">微信扫描二维码</h4>
+								</div>
+								<img src="mywechat.jpeg" style="width: 230px;height:230px ;">
+							</div>
+					  </div>
 				</div>
 			</ul>
 		</div>
@@ -70,8 +69,8 @@
 			<div class="article">
 			<div id="introducecontent">
 			<h1>自我介绍</h1>
-			<h3>introduce</h3></br>
-			<p>我是一个前端编程新手，英语上也是。但是当我曾经使用VBA编写了一个简单的客户关系管理的系统后，我觉得我被电脑语言迷上了，这将要用我的一生来实践我对编程的热爱。</p>
+			<h3>introduce</h3>
+				<p>我是一个前端编程新手，英语上也是。但是当我曾经使用VBA编写了一个简单的客户关系管理的系统后，我觉得我被电脑语言迷上了，这将要用我的一生来实践我对编程的热爱。</p>
 			<p>As you know,i'm learner for web development,And not just this,i'm not good at English.When i had tried to use VBA to write a system for customer management,i have had a lifelong fascination with this,and i will use my all life to Verify.</p>
 			</div>
 			</div>
